--- a/index.html
+++ b/index.html
@@ -104,7 +104,6 @@
                                 <h5 class="modal-title" id="modalTitle">Settings</h5>
                             </div>
                             <div class="modal-body">
-                                
                                 <label for="pat" class="form-label">
                                     PAT
                                 </label>
@@ -112,7 +111,7 @@
                                   href="https://docs.github.com/en/authentication/keeping-your-account-and-data-secure/creating-a-personal-access-token">
                                     ?
                                 </a>
-                                <input type="password" class="form-control mb-2" id="pat"
+                                <input type="password" class="form-control mb-2" id="pat" placeholder="Enter PAT here"
                                     value=${pat} onChange=${(event) => onChange({ ...settings, pat: event.target.value })} />
                                 
                                 <label class="form-label">Repositories</label>
