--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
+<title>Dashboard</title>
+
 <script type="module">
     import { useState, useEffect } from 'https://unpkg.com/preact/hooks/dist/hooks.module.js?module';
     import { html, render } from 'https://unpkg.com/htm/preact/index.mjs?module'
