--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
+<link rel="shortcut icon" href="favicon.ico">
 <title>Dashboard</title>
 
 <script type="module">
